--- a/test/fixtures/subjects.yml
+++ b/test/fixtures/subjects.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  teacher: MyString
+  name: matematyka
+  user_id: 1
 
 two:
-  name: MyString
-  teacher: MyString
+  name: biologia
+  user_id: 1
