--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,7 +5,11 @@
 # below each fixture, per the syntax in the comments below
 #
 one:
+  id: 1
   email: test1@example.org
+  name: Dawid
+  lastname: Nowak
+  role: teacher
   encrypted_password: <%= User.new.send(:password_digest, '123greetings') %>
 two:
   email: test2@example.org
